# CPSC471_Fall2024_GroupProject

./: .gitignore  Final.sql  Plan.sql  README.md  docker-compose.yaml  docker_compose.yaml  features.yml  flake.nix  install.sh  pyproject.toml  run.sh  shell.nix
Diagrams/: TestXML.drawio
documentation/: Final.sql  features.yml  format_sql_statements.py  pyproject.toml
home_ims/: Build_Database.py  sql_statements.py
home_ims/src/: Build_Database.py  Database.py  RESET_DATABASE_TO_DEMO.py  Return_Formatted.py  __main__.py  action_result.py  env.py  main.ui  mainwindow.ui  sql_statements.json  sql_statements.py
home_ims/src/ui/: inv_entry.ui  main.ui
home_ims/src/view/: __init__.py  add_inventory.py  add_item_type.py  add_location.py  add_recipe.py  add_storage.py  add_user.py  analytics.py  history.py  inventory.py  meals.py  purchases.py  recipes.py  shopping_list.py  util.py
home_ims/src/view/ui/: dialog_add_inventory.ui  inv_entry.ui  main.ui  meal_entry.ui  recipe_entry.ui
home_ims/src/view/ui/popup/: add_item.ui  add_item_type.ui  add_location.ui  add_meal.ui  add_recipe.ui  add_storage.ui  add_user.ui  consume_item.ui  delete_item.ui  delete_recipe.ui  error_general.ui  error_generic.ui  info_item.ui  item_info.ui  recipe_ingredient.ui  schedule_meal.ui  shopping_list.ui  waste_item.ui
mariadb/: README.md  template.env
